Added PhotoCounter class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
         mainwindow.h
+        PhotoCounter.h
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
