Added template code in createNamedQTWidget.h to create named QT widgets. Changed OptionsDialog to use these templates rather than creating functions to do this in the dialog itself.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(PROJECT_SOURCES
 	    PhotoReducerModel.cpp
         PhotoReducerController.cpp
         PhotoReducerController.h
+        createNamedQTWidget.h
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
