Created a NumericLineEdit Subclass of Line Edit. Improve error handling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(PROJECT_SOURCES
         OptionsDialog.h
         OptionsInitStruct.h
         OptionErrorCode.h
+        NumericLineEdit.h
     	PhotoReducerModel.h
         PhotoReducerModel.cpp
         SignalRouterController.h
